k8s/overlays/pr-template/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log680
spec:
  rules:
    - host: pr-$(PR_NUMBER)-log680.home.adammihajlovic.ca
